--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -103,10 +103,10 @@ footer{
 }
 @media only screen and (max-width:768px) {
     footer{
-        height: 500px;
+        height: 65vh;
     }
     .footer__list__five{
-        margin-right: 517px;
+        margin-right: 65%;
         margin-top: 29px;
     }
     .footer__big{
