--- a/src/scss/components/company.scss
+++ b/src/scss/components/company.scss
@@ -55,17 +55,17 @@
     .end__icon{
         width: 39%;
         /* justify-content: space-around; */
-        display: inline-block;
-        margin-left: 240px;
-        margin-top: 25px;
+        display: flex;
+        margin-left: 31%;
+        margin-top: 5%;
     }
     .company{
         width: 100%;
-    /* height: auto; */
-    /* display: block; */
-    text-align: center;
-    /* justify-content: space-evenly; */
-    align-items: center;
+        height: auto;
+        display: block;
+        text-align: center;
+        justify-content: space-evenly;
+        align-items: center;
     }
     .end__text{
         display:inline-block;
