--- a/src/scss/components/contact.scss
+++ b/src/scss/components/contact.scss
@@ -1,6 +1,6 @@
 .contact{
     width: 100%;
-    height: 208px;
+    height: 25vh;
     background-color: #fff;
 }
 .contact__big{
@@ -149,17 +149,31 @@ px
 }
 }
 @media only screen and (max-width:768px) {
-    .contact__phone{
-        display: block;
-        width: 32%;
-        justify-content: space-between;
-        text-align: center;
-        align-items: center;
-        left: 63px;
-        position: relative;
-        margin: 0px 0px;
+    .contact{
+        margin: 0px 35px;
+        width: 100%;
+        height: 33vh;
+        background-color: #fff;
     }
+    .contact__phone{
+        display: table-footer-group;
+        width: 70%;
+        justify-content: space-between;
+        text-align: start;
+        align-items: center;
+        left: 25px;
+        position: relative;
+        top: 10px;
+        flex-wrap: wrap;
+    }
+    .contact__big{
+        display: block;
+        justify-content: unset;
     
+    }
+    .contact__phone button{
+        left: -15px;
+    }
 }
 @media only screen and (max-width:425px) {
     .contact{
