--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -12,6 +12,7 @@ header{
        min-height: 100vh;
         width: 100%;
     }
+    
     nav{
         width: 100%;
         display: flex;
@@ -77,18 +78,14 @@ header{
         position: relative;
         top: 4px;
         left: 0px;
-        color: white;
+        color: #fff;
         font-weight: bold;
         font-size: 16px;
     }
-    .moon{
-        position: relative;
-    top: 2px;
-    left: -15px;
-    color: white;
-    font-weight: bold;
-    font-size: 22px;
-    }
+   
+}
+body.dark{
+    background: #1c2e7b;
 }
 .content{
     display: flex;
@@ -109,16 +106,19 @@ header{
     top: 390px;
     position: absolute;
     left: 18%;
-
     h2{
         font-size: 50px;
     line-height: 60px;
     font-weight: 600;
     color: white;
+    animation: showtitle ease-in-out 1 1s forwards;
+    opacity: 0;
     }
     p{
         color: white;
     margin-top: 30px;
+    animation: totopimg ease-in-out 1 1s forwards;
+    opacity: 0;
     }
     button{
         position: relative;
@@ -129,6 +129,8 @@ header{
         background: white;
         transition: linear 0.3s;
         border: 1px solid white;
+        animation: showtitle ease-in-out 1 1s forwards;
+        opacity: 0;
     #one{
         color: #1a2c79;
         font-weight: 600;
@@ -137,6 +139,74 @@ header{
     }
     }
 }
+
+    #search-box{
+        background:#fff;
+        border-radius: 30px;
+    }
+    #search-box #search-text{
+        border: none;
+        outline: none;
+        background: none;
+        // padding: 5px 5px;
+        font-size: 10px;
+        width: 10px;
+        padding: 0;
+        transition: all 0.25s ease-in-out;
+    }
+    #search-box:hover #search-text , #search-box #search-text:valid{
+        width: 150px;
+        padding: 10px 5px;
+        
+    }
+    #search-box #search-btn{
+        background: linear-gradient(75deg, rgb(22 37 103 / 84%) 10%, rgb(230 2 100 / 37%));
+        border: none;
+        padding: 2px 5px;
+        margin-left: -14px;
+        cursor: pointer;
+        border-radius: 50%;
+    }
+
+#wrapper{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    min-height: 5vh;
+    margin-left: 10px;
+    left: 0px;
+    position: absolute;
+    top: 5px;
+   }
+   .switch-toggle{
+    width: 36px;
+    height: 20px;
+    appearance: none;
+    background: #e60264;
+    border-radius: 30px;
+    box-shadow:inset 0px 0px 16px rgba(0 ,0 ,0 ,.3);
+    transition: 0.25s cubic-bezier(.25,-0.59,.82,1.66 );
+   }
+   .switch-toggle::before{
+    content: " ";
+    width: 20px;
+    height: 20px;
+    position:absolute;
+    background: #fff;
+    border-radius: 50%;
+    top: 0px;
+ 
+    box-shadow: 0px 0px 16px rgba(0 ,0 ,0 ,.3);
+    transition: 0.3s;
+    transition: 0.25s cubic-bezier(.25,-0.59,.82,1.66 );
+   }
+   .switch-toggle:checked{
+    background:#1a2c79;
+   }
+   .switch-toggle:checked:before{
+    left: 25px;
+   }
+
 .page__menu{
  
     left: -37px;
@@ -188,17 +258,82 @@ nav.sticky a:hover {
 button:hover #one{
     color: #fff;
 }
-// li:hover .page__menu{
-//     display: block;
-//     transition: linear 0.5s;
+// .collapsible {
+//     background-color: #173451;
+//     color: white;
+//     cursor: pointer;
+//     padding: 18px;
+//     width: 100%;
+//     border: none;
+//     text-align: left;
+//     outline: none;
+//     font-size: 15px;
+//   }
+  
+//   .active, .collapsible:hover {
+//     background-color: #173451;
+//   }
+  
+//   .collapsible:after {
+//     content: '\002B';
+//     color: white;
+//     font-weight: bold;
+//     float: right;
+//     margin-left: 5px;
+//   }
+  
+//   .active:after {
+//     content: "\2212";
+//   }
+  
+//   .content {
+//     padding: 0 18px;
+//     max-height: 0;
+//     overflow: hidden;
+//     transition: max-height 0.2s ease-out;
+//     background-color: #f1f1f1;
+//   }
+// .btn-group{
+//   padding-top: 10px;
 // }
+//   .content button {
+//     background-color: transparent;
+//     border-radius: 20px;
+//     border: solid 2px #fcbf16;
+//     padding: 10px;
+//     /* margin-top: 10px; */
+//     margin-bottom: 10px;
+//     cursor: pointer;
+//     display: inline-block;
+//   }
+//   .content button:hover {
+//     background-color: #fcbf16;
+//     /* border: none; */
+//     color: white;
+//     transition: 0.3s;
+//   }
+li:hover .page__menu{
+    display: block;
+    transition: linear 0.5s;
+}
 .page__menu a:hover {
     transition: linear 0.5s;
     color: #e60264;
+    
+}
+// .content i:hover{
+//     animation: rotate90 ease-in-out 1 1s forwards;
+// }
+nav .content:hover{
+    animation: slide-right ease-in-out 1 1s forwards;
+}
+nav ul:hover{
+    animation: slide-left ease-in-out 1 1s forwards;
 }
 nav a:hover{
     color:#1c2e7b;
 }
+
 @media only screen and (max-width:996px) {
     .bigger__one{
         top: 270px;
@@ -275,6 +410,7 @@ nav a:hover{
     }
     nav{
         justify-content: space-between  ;
+        padding: 20px 60px;
     }
     }
        .bigger__one{
@@ -335,3 +471,43 @@ nav a:hover{
     }
 }
 
+@keyframes totopimg{
+    from{
+        transform: translate(-50% , 20%);
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes showtitle{
+    from{
+        filter: blur(33px);
+        transform: translate(-50% , -80%);
+    }
+    to{
+        opacity: 1;
+        filter: blur(0px);
+        // transform: translate(-50% , 50%);
+    }
+}
+@keyframes slide-right {
+    0% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+    100% {
+      -webkit-transform: translateX(100px);
+              transform: translateX(100px);
+    }
+  }
+//   @keyframes slide-left {
+//     0% {
+//       -webkit-transform: translateX(0);
+//               transform: translateX(0);
+//     }
+//     100% {
+//       -webkit-transform: translateX(-100px);
+//               transform: translateX(-100px);
+//     }
+//   }
+  
