--- a/src/scss/components/lastest.scss
+++ b/src/scss/components/lastest.scss
@@ -29,31 +29,31 @@
     margin-left: 280px;
 }
 .lastest__bg__one img{
-    width: 370px;
+    width: 85%;
     height: 246px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
 .lastest__bg__two img{
-    width: 370px;
+    width: 85%;
     height: 246px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
 .lastest__bg__three img{
-    width: 370px;
+    width: 85%;
     height: 246px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
 .lastest__bg__content{
     background-color: #fff;
-    width: 370px;
+    width: 85%;
     height: 200px;
     position: relative;
     top: -7px;
     padding: 15px;
-    left: 0px;
+    left: 34px;
 }
 .content__p__two{
     display: flex;
@@ -79,13 +79,14 @@
     }
 }
 .user__bg{
-    width: 370px;
+    width: 85%;
     height: 46px;
     background: #f1f1f1;
-    top: -22px;
+    top: -18px;
     border-radius: 0 0 5px 5px;
     position: relative;
     transition: linear 0.5s;
+    left: 34px;
 }
 .user__circle{
     a{
@@ -141,7 +142,15 @@
     box-shadow: 0px 17px 26px -16px  rgb(0 0 0 / 41%);
 }
 
-
+.lastest__bg__one:hover{
+    animation:  bounce-top 1 1s forwards;
+}
+.lastest__bg__two:hover{
+    animation:  bounce-top 1 1s forwards;
+}
+.lastest__bg__three:hover{
+    animation:  bounce-top 1 1s forwards;
+}
 @media  only screen and (max-width:1440px) {
     .lastest__big{
         display: flex;
@@ -156,17 +165,16 @@
 @media only screen and (max-width:996px) {
     .lastest__big{
         display: flex;
-        justify-content: space-around;
-        width: 80%;
-        align-items: center;
         position: relative;
-        margin-top: 50px;
-        margin-left: 98px;
+        width: 100%;
+        justify-content: space-between;
         flex-wrap: wrap;
+        gap: 20px;
+        margin-left: 10px;
     }
     .lastest__bg__three{
         position: relative;
-        left: -199px
+      
     }
     .lastest{
         height: 150vh
@@ -190,11 +198,12 @@
     }
     .lastest__big{
         display: flex;
-        justify-content: space-around;
-        width: 100%;
-        align-items: center;
         position: relative;
-        margin: 70px 0px;
+        width: 100%;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin-left: 10px;
     }
     .lastest__bg__one img{
     width: 290px;
@@ -235,15 +244,19 @@
 }
 @media  only screen and (max-width:768px){
     .lastest__big{
+        display: flex;
+        position: relative;
         width: 100%;
-    justify-content: space-around;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 70px;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin-left: 10px;
     }
     .lastest{
-        height: 120vh;
+        height: 120em;
+    }
+    .lastest__bg__three{
+        margin-top: 10px;
     }
 }
 @media only screen and (max-width:425px) {
@@ -418,4 +431,58 @@
         /* left: 16px;*/
     }
 }
+@keyframes bounce-top {
+    0% {
+      -webkit-transform: translateY(-45px);
+              transform: translateY(-45px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 1;
+    }
+    24% {
+      opacity: 1;
+    }
+    40% {
+      -webkit-transform: translateY(-24px);
+              transform: translateY(-24px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    65% {
+      -webkit-transform: translateY(-12px);
+              transform: translateY(-12px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    82% {
+      -webkit-transform: translateY(-6px);
+              transform: translateY(-6px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    93% {
+      -webkit-transform: translateY(-4px);
+              transform: translateY(-4px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    25%,
+    55%,
+    75%,
+    87% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    100% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+  }
+  
+  
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
