--- a/src/scss/components/services.scss
+++ b/src/scss/components/services.scss
@@ -1,6 +1,6 @@
  .services{
    width: 100%;
-   height: 110vh;
+   height: 120vh;
    background: #f9f9f9;
  }
  .services__content{
@@ -18,23 +18,21 @@
    }
  }
  .services__list{
-   display: grid;
-   grid-template-columns: 40% 60%;
-   grid-template-rows: 50% 50%;
-   /* position: relative; */
-   top: 130px;
-   /* left: -8px; */
-   margin: 120px 500px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+  margin: 10em 0px;
  }
  .services__top{
-   width: 630px;
-   height: 280px;
+  width: 40%;
+  height: 28vh;
    padding: 26px 76px;
    background: #fff;
    /* position: absolute; */
    transition: linear 0.5s;
    border: 1px solid #fff;
-   margin: 10px -115px;
+
    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
     h2{
       font-size: 19px;
@@ -64,14 +62,14 @@
     }
  }
  .services__top__one{
-   width: 630px;
-   height: 280px;
+  width: 40%;
+  height: 28vh;
    padding: 26px 79px;
    background: #fff;
    /* position: absolute; */
    transition: linear 0.5s;
    border: 1px solid #fff;
-   margin: 30px -115px;
+
    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
    h2{
       font-size: 19px;
@@ -101,15 +99,13 @@
     }
  }
  .services__bot{
-   width: 630px;
-   height: 280px;
+  width: 40%;
+  height: 28vh;
    padding: 26px 63px;
-   margin-left: 10px;
    background: #fff;
    /* position: absolute; */
    transition: linear 0.5s;
    border: 1px solid #fff;
-   margin: 10px 37px;
    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
    h2{
       font-size: 19px;
@@ -139,15 +135,13 @@
     }
  }
  .services__bot__one{
-   width: 630px;
-   height: 280px;
+  width: 40%;
+  height: 28vh;
    padding: 26px 63px;
-   margin-left: 10px;
    background: #fff;
    /* position: absolute; */
    transition: linear 0.5s;
    border: 1px solid #fff;
-   margin: 30px 37px;
    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
    h2{
       font-size: 19px;
@@ -195,15 +189,7 @@
  }
 
  }
- .bigger__top{
-   position: relative;
-   left: -65px;
- }
- .bigger__botom{
-   width: 50%;
-   position: relative;
-   left: 80px;
- }
+
  .services__top:hover h2{
    color: #e80566;
  }
@@ -216,11 +202,13 @@
  .services__bot__one:hover h2{
    color: #e80566;
  }
- .bigger__top  .services__top:hover {
+ .services .services__top:hover {
    box-shadow: 0px 17px 26px -16px rgb(0 0 0 / 41%);
+   animation: bounce-top ease-in-out 1 1s forwards;
  }
  .bigger__botom .services__bot:hover {
    box-shadow: 0px 17px 26px -16px rgb(0 0 0 / 41%);
+   
  }
  .bigger__top  .services__top__one:hover {
    box-shadow: 0px 17px 26px -16px rgb(0 0 0 / 41%);
@@ -228,12 +216,25 @@
  .bigger__botom .services__bot__one:hover{
    box-shadow: 0px 17px 26px -16px rgb(0 0 0 / 41%);
  }
+ .services .services__top:hover{
+  animation: bounce-top ease-in-out 1 1s forwards;
+ }
+ .services .services__bot__one:hover{
+  animation: bounce-top ease-in-out 1 1s forwards;
+ }
+ .services .services__top__one:hover{
+  animation: bounce-top ease-in-out 1 1s forwards;
+ }
+ .services .services__bot:hover{
+  animation: bounce-top ease-in-out 1 1s forwards;
+ }
  button:hover{
    background: none;
 }
 .services__button:hover #two{
    color: #e80566;
 }
+
 @media only screen and (max-width:1440px) {
   .services{
     height: 118vh;
@@ -243,112 +244,29 @@
       width: 250px;
       height: 50px;
       position: absolute;
-      left: 45%;
+      left: 40%;
       border: 2px solid #e80566;
-      margin-top: 0px;
+      margin-top: -75px;
       /* top: 10px; */
       border-radius: 5px;
       transition: linear 0.5s;
     }
 
-.services__list {
-  display: grid;
-  grid-template-columns: 53% 50%;
-  grid-template-rows: 50% 50%;
-  position: relative;
-  /* top: 130px; */
-  left: 25px;
-  margin: 120px 100px;
-  top: 0px;
+    .services__list{
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: center;
+      margin: 10em 0px;
+     }
 }
-.bigger__top {
-  position: static;
-  left: 0px;
-}
-.services__top{
-  margin: 20px 0px;
-  position:static;
-
-}
-.services__top__one{
-  margin:0;
-  position: static;
-}
-.bigger__botom{
-  position: static;
-  left: 0px;
-  width: 0px;
-  
-}
-.services__bot{
-  position: static;
-  margin: 20px 0px;
-}
-.services__bot__one{
-  position: static;
-  margin: 0;
-  margin-left: 0px;
-}
-}
-
 @media only screen and (max-width:1024px){
   .services__list{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
-    /* top: 130px; */
-    margin: 110px 40px;
-    left: 0px;
-    position: static;
-    top: 0px;
-  }
-  .services__top{
-    width: 450px;
-    height: 294px;
-    padding: 20px 60px;
-    background: #fff;
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-   margin:20px 0px;
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__top__one{
-    width: 450px;
-    height: 294px;
-    padding: 20px 60px;
-    background: #fff;
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    margin : 0px;
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__bot{
-    width: 450px;
-    height: 294px;
-    padding: 20px 60px;
-    background: #fff;
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    margin:20px 0px;
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__bot__one{
-    width: 450px;
-    height: 294px;
-    padding: 20px 60px;
-    background: #fff;
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    margin:0px;
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__button button{
-    left: 39%;
-    margin-top: -60px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    margin: 10em 0px;
   }
 }
 
@@ -357,291 +275,308 @@
     height: 150vh;
   }
   .services__list{
-    display: block;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
-    /* top: 130px; */
-    margin: 110px 40px;
-    left: 0px;
-    position: static;
-    top: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    margin: 10em 0px;
   }
-  .bigger__botom{
-
-    width: 50%;
-    position: relative;
-    margin-left: 0px;
-  }
-  .services__button button{
-    background: #e80566;
-    width: 250px;
-    height: 50px;
-    position: absolute;
-    left: 30%;
-    border: 2px solid #e80566;
-    margin-top: -40px;
-    /* top: 10px; */
-    border-radius: 5px;
-    transition: linear 0.5s;
-  }
-  .bigger__top {
-    position: static;
-    left: 0px;
-    margin-left: 0;
-}
-.services__top{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-.services__top__one{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-.services__bot{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-.services__bot__one{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-.bigger__botom{
-  position: static;
-  left: 0px;
-  margin-left: 0;
-}
 }
 @media only screen and (max-width:768px) {
-  .services__list{
-    display: block;
-    /* grid-template-columns: 50% 50%; */
-    /* grid-template-rows: 50% 50%; */
-    /* flex-wrap: wrap; */
-    /* top: 130px; */
-  margin:110px 50px;
-    left: 0px;
-    /* position: static; */
-    /* top: 0px; */
-    /* width: 1077px;*/
-  }
-  .bigger__botom{
-
-    width: 50%;
-    position: relative;
-    margin-left: 0px;
-  }
-  .services__button button{
-    background: #e80566;
-    width: 250px;
-    height: 50px;
-    position: absolute;
-    left: 30%;
-    border: 2px solid #e80566;
-    margin-top: -40px;
-    /* top: 10px; */
-    border-radius: 5px;
-    transition: linear 0.5s;
-  }
-  .bigger__top {
-    position: static;
-    left: 0px;
-    margin-left: 0px;
-}
-.services__top{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-.services__top__one{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-.services__bot{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-.services__bot__one{
-  width: 690px;
-  height: 235px;
-  padding: 5px 60px;
-}
-
-}
-
-@media only screen and (max-width:425px) {
-  .services{
-    height: 100em;
-  }
-  .services__list{
-    margin: 110px 15px;
-  }
-  .services__top{
-      width: 395px;
-      height: 246px;
-      padding: 0px 47px;
-      /* margin-left: 15px; */
-      /* position: absolute; */
-      transition: linear 0.5s;
-      border: 1px solid #fff;
-      /* margin: 20px 0px; */
-      box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__bot{
-    width: 395px;
-    height: 246px;
-    padding: 0px 47px;
-    /* margin-left: 15px; */
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    /* margin: 20px 0px; */
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__bot__one{
-    width: 395px;
-    height: 246px;
-    padding: 0px 47px;
-    /* margin-left: 15px; */
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    /* margin: 20px 0px; */
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__top__one{
-    width: 395px;
-    height: 246px;
-    padding: 0px 47px;
-    /* margin-left: 15px; */
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    /* margin: 20px 0px; */
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-  }
-  .services__button button{
-    background: #e80566;
-    width: 250px;
-    height: 50px;
-    position: absolute;
-    left: 15%;
-    border: 2px solid #e80566;
-    margin-top: -40px;
-    /* top: 10px; */
-    border-radius: 5px;
-    transition: linear 0.5s;
-  }
-}
-@media only screen  and (max-width:375px){
   .services{
     height: 110em;
   }
   .services__list{
-    margin: 110px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    margin: 10em 0px;
   }
-  .services__top {
-    width: 374px;
-    height: 290px;
-    padding: 0px 45px;
-    /* margin-left: 15px; */
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    /* margin: 20px 0px; */
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+  .services__top{
+    width: 80%;
+    height: 300px;
+     padding: 26px 76px;
+     background: #fff;
+     /* position: absolute; */
+     transition: linear 0.5s;
+     border: 1px solid #fff;
+  
+     box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+      h2{
+        font-size: 19px;
+        font-weight: 600;
+        transition: linear 0.5s;
+      }
+      p{
+        font-size: 16px;
+      font-weight: normal;
+      line-height: 30px;
+      margin-top: 10px;
+      color: #707070;
+      }
+      a{
+        top: 18px;
+        position: relative;
+      }i{
+        font-size: 31px;
+        position: relative;
+        top: 30px;
+        left: -45px;
+        transition: linear 0.5s;
+        background: linear-gradient(75deg, #1c2e7b 10%, #e60264);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+   }
+   .services__top__one{
+    width: 80%;
+    height: 300px;
+     padding: 26px 79px;
+     background: #fff;
+     /* position: absolute; */
+     transition: linear 0.5s;
+     border: 1px solid #fff;
+  
+     box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+     h2{
+        font-size: 19px;
+        font-weight: 600;
+        transition: linear 0.5s;
+      }
+      p{
+        font-size: 16px;
+      font-weight: normal;
+      line-height: 30px;
+      margin-top: 10px;
+      color: #707070;
+      }
+      a{
+        top: 18px;
+        position: relative;
+      }
+      i{
+        font-size: 31px;
+        position: relative;
+        top: 30px;
+        left: -45px;
+        background: linear-gradient(75deg, #1c2e7b 10%, #e60264);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+   }
+   .services__bot{
+    width: 80%;
+    height: 300px;
+     padding: 26px 63px;
+     background: #fff;
+     /* position: absolute; */
+     transition: linear 0.5s;
+     border: 1px solid #fff;
+     box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+     h2{
+        font-size: 19px;
+        font-weight: 600;
+        transition: linear 0.5s;
+      }
+      p{
+        font-size: 16px;
+      font-weight: normal;
+      line-height: 30px;
+      margin-top: 10px;
+      color: #707070;
+      }
+      a{
+        top: 18px;
+        position: relative;
+      }
+      i{
+        font-size: 31px;
+        position: relative;
+        top: 30px;
+        left: -45px;
+        background: linear-gradient(75deg, #1c2e7b 10%, #e60264);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+   }
+   .services__bot__one{
+    width: 80%;
+    height: 300px;
+     padding: 26px 63px;
+     background: #fff;
+     /* position: absolute; */
+     transition: linear 0.5s;
+     border: 1px solid #fff;
+     box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+     h2{
+        font-size: 19px;
+        transition: linear 0.5s;
+        font-weight: 600;
+      }
+      p{
+        font-size: 16px;
+      font-weight: normal;
+      line-height: 30px;
+      margin-top: 10px;
+      color: #707070;
+      }
+      a{
+        top: 18px;
+        position: relative;
+      }
+      i{
+        font-size: 31px;
+        position: relative;
+        top: 30px;
+        left: -45px;
+        background: linear-gradient(75deg, #1c2e7b 10%, #e60264);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+   }
+   .services__button{
+      button{
+     background: #e80566;
+     width: 250px;
+     height: 50px;
+     position: absolute;
+     left: 30%;
+     border: 2px solid  #e80566 ;
+     margin-top: -90px;
+     /* top: 10px; */
+     border-radius: 5px;
+     transition: linear 0.5s;
+   #two{
+     color: #fff;
+     font-weight: bold;
+   }
+   }
+  }  
 }
-.services__bot {
-  width: 374px;
-  height: 290px;
-  padding: 0px 45px;
-  /* margin-left: 15px; */
-  /* position: absolute; */
-  transition: linear 0.5s;
-  border: 1px solid #fff;
-  /* margin: 20px 0px; */
-  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+
+@media only screen and (max-width:425px) {
+  .services{
+    height: 200em;
+  }
+  .services__list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    margin: 10em 0px;
+  }
+  .services__bot{
+    height: 40vh;
+  }
+  .services__top{
+    height: 40vh;
+  }
+  .services__bot__one{
+    height: 40vh;
+  }
+  .services__top__one{
+    height: 40vh;
+  }
+  .services__button button{
+    left: 20%;
+  }
+  
 }
-.services__top__one {
-  width: 374px;
-  height: 290px;
-  padding: 0px 45px;
-  /* margin-left: 15px; */
-  /* position: absolute; */
-  transition: linear 0.5s;
-  border: 1px solid #fff;
-  /* margin: 20px 0px; */
-  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-}
-.services__bot__one {
-  width: 374px;
-  height: 290px;
-  padding: 0px 45px;
-  /* margin-left: 15px; */
-  /* position: absolute; */
-  transition: linear 0.5s;
-  border: 1px solid #fff;
-  /* margin: 20px 0px; */
-  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-}
+@media only screen  and (max-width:375px){
+  .services{
+    height: 200em;
+  }
+  .services__list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    margin: 10em 0px;
+  }
+  .services__bot{
+    height: 45vh;
+  }
+  .services__top{
+    height: 45vh;
+  }
+  .services__bot__one{
+    height: 45vh;
+  }
+  .services__top__one{
+    height: 45vh;
+  }
+  .services__button button{
+    left: 15%;
+  }
 }
 @media only screen  and (max-width:320px){
   .services{
-    height: 121em;
+    height: 200em;
   }
   .services__list{
-    margin: 110px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    margin: 10em 0px;
   }
-  .services__top {
-    width: 310px;
-    height: 345px;
-    padding: 0px 45px;
-    /* margin-left: 15px; */
-    /* position: absolute; */
-    transition: linear 0.5s;
-    border: 1px solid #fff;
-    /* margin: 20px 0px; */
-    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
+ 
+
 }
-.services__bot {
-  width: 310px;
-  height: 345px;
-  padding: 0px 45px;
-  /* margin-left: 15px; */
-  /* position: absolute; */
-  transition: linear 0.5s;
-  border: 1px solid #fff;
-  /* margin: 20px 0px; */
-  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-}
-.services__top__one {
-  width: 310px;
-  height: 345px;
-  padding: 0px 45px;
-  /* margin-left: 15px; */
-  /* position: absolute; */
-  transition: linear 0.5s;
-  border: 1px solid #fff;
-  /* margin: 20px 0px; */
-  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-}
-.services__bot__one {
-  width: 310px;
-    height: 345px;
-  padding: 0px 45px;
-  /* margin-left: 15px; */
-  /* position: absolute; */
-  transition: linear 0.5s;
-  border: 1px solid #fff;
-  /* margin: 20px 0px; */
-  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
-}
-.services__button{
-  left: 5%;
-}
+@keyframes bounce-top {
+  0% {
+    -webkit-transform: translateY(-45px);
+            transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+    opacity: 1;
+  }
+  24% {
+    opacity: 1;
+  }
+  40% {
+    -webkit-transform: translateY(-24px);
+            transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  65% {
+    -webkit-transform: translateY(-12px);
+            transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  82% {
+    -webkit-transform: translateY(-6px);
+            transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  93% {
+    -webkit-transform: translateY(-4px);
+            transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  25%,
+  55%,
+  75%,
+  87% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    opacity: 1;
+  }
 }
