--- a/src/scss/components/testominal.scss
+++ b/src/scss/components/testominal.scss
@@ -73,6 +73,16 @@
         font-size: 12px;
     }
 }
+.testominal .content__one:hover{
+    animation: text-focus-in ease-in-out 0.5s ;
+}
+.testominal .content__two:hover{
+    animation: text-focus-in ease-in-out 0.5s ;
+}
+.testominal .content__three:hover{
+    animation: text-focus-in ease-in-out 0.5s ;
+}
+
 
 @media only screen and (max-width:1440px){
     .testominal__content{
@@ -99,6 +109,19 @@
 
     }
 }
+@media only screen and (max-width:768px) {
+    .testominal{
+        background-color: #fff;
+    width: 100%;
+    height: 80vh;
+    }
+    .testominal__content{
+        display: block;
+    margin: 180px 25px;
+    width: 92%;
+    position: absolute;
+    }
+}
 @media only screen and (max-width:425px) {
     .testominal{
         background-color: #fff;
@@ -122,3 +145,16 @@
     }
     
 }
+@keyframes text-focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+  }
+  
