--- a/src/scss/components/contact.scss
+++ b/src/scss/components/contact.scss
@@ -1,19 +1,22 @@
 .contact{
     width: 100%;
-    height: 25vh;
+    height: 15vh;
     background-color: #fff;
 }
 .contact__big{
     display: flex;
-    width: 100%;
-    justify-content: space-around;
-    position: relative;
-    top: 61px;
+    /* width: 100%; */
+    justify-content: space-between;
+    /* position: relative; */
+    /* top: 61px; */
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 50px;
 }
 .contact__phone{
     display: flex;
     justify-content: space-around;
-    width: 24%;
+   
     align-items: center;
     left: -110px;
     position: relative;
