--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,12 +1,32 @@
 @import "../globals/";
 @import "../utilities";
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+
+
+:root{
+    --primary-color:#edf2fc;
+    --secondary-color:#21212121;
+    --color-text:#1a2c79;
+    --color-bg:#e60264;
+    --bg-cloud:#f5f5da;
+    --bg-sun:#fff;
+    --bglight-body:#d9dfe3;
+    --bg-dark:#1d2234;
+    --bg-light-checkbox-one:#bfd6bb;
+    --bg-light-checkbox-two:#90d1c7;
+    --bg-dark-checkbox-one:#73abb9;
+    --bg-dark-checkbox-two:#335a63;
+}
+
 header{
     background:url('https://demo.w3layouts.com/demos_new/template_demo/22-03-2021/call-center-liberty-demo_Free/987049326/web/assets/images/banner1.jpg');
     width: 100%;
+    max-width: 100%;
    height: 100vh;
     background-size: cover;
-    .bigger{
+    list-style: none;
+    .header__one{
         background: linear-gradient(75deg, rgb(22 37 103 / 84%) 10%, rgb(230 2 100 / 37%));
         position:absolute;
        min-height: 100vh;
@@ -14,15 +34,15 @@ header{
     }
     
     nav{
+        max-width: 100%;
         width: 100%;
         display: flex;
         justify-content: space-around;
         position: fixed;
-        justify-items: center;
         padding: 20px 0px;
         transition: all 0.5s ease-in-out; 
         ion-icon{
-            position: absolute;
+            position: absolute; 
             top: 5px;
             left: 65px;
             color: #fff;
@@ -35,10 +55,10 @@ header{
     }
     ul{
         position: relative;
-        
         display: flex;
        li{
         position:relative;
+        margin: 0px 10px;
        }
     }
     nav.sticky a{
@@ -78,14 +98,22 @@ header{
         position: relative;
         top: 4px;
         left: 0px;
-        color: #fff;
+        color: #000;
         font-weight: bold;
-        font-size: 16px;
+        font-size: 10px;
+        width: 50px;
+        text-align: center;
+        border-radius: 50%;
+        align-items: center;
+        height: 21px;
     }
    
 }
+.a__one{
+    color: #e60264;
+}
 body.dark{
-    background: #1c2e7b;
+    background-color: $color-text;
 }
 .content{
     display: flex;
@@ -115,7 +143,7 @@ body.dark{
     opacity: 0;
     }
     p{
-        color: white;
+    color: white;
     margin-top: 30px;
     animation: totopimg ease-in-out 1 1s forwards;
     opacity: 0;
@@ -195,54 +223,68 @@ body.dark{
     background: #fff;
     border-radius: 50%;
     top: 0px;
- 
     box-shadow: 0px 0px 16px rgba(0 ,0 ,0 ,.3);
     transition: 0.3s;
     transition: 0.25s cubic-bezier(.25,-0.59,.82,1.66 );
    }
    .switch-toggle:checked{
     background:#1a2c79;
+    color: white;
    }
    .switch-toggle:checked:before{
     left: 25px;
    }
+   .dark-mode{
+    background-color: white;
+    color: white;
+   }
+.fa-headphones-simple{
+    margin-left: 10px;
+}
+.collapsible{
+    transition: 1s;
+}
+.clist{
+    transition: 0.5s;
+}
+.clist__one{
+background-color: #1a2c79;
+border-radius: 10px;
+width: 100%;
+display: none;
+align-items: center;
+justify-content: center;
+}
 
-.page__menu{
- 
-    left: -37px;
-    position: absolute;
-    top: 35px;
-    background: #fff;
-    padding: 10px 0px;
-    width: 200px;
-    border-radius: 5px;
-    display: none;
-    box-shadow: rgb(12 12 12 / 6%) 0px 1px 20px 0px;
- }
- .page__menu li{
-    padding: 4px 52px;
- }
- .page__cirle{
-    content: "";
-    width: 14px;
-    height: 14px;
-    background: white;
-    border: 1px solid #fff;
-   
-    transform: translateX(-50%) rotateZ(45deg);
-    position: relative;
-    top: -17px;
-    left: 50%;
- }
- .page__menu a{
-    margin: 0;
-    padding: 10px 0px;
-    color: black;
+.one__fa{
+    transform: rotate(180deg);
+    transition: 2s;
+}
+.fa-caret-up{
+    color: #fff;
+    font-size: 20px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.clist__one li{
+    margin: 10px 0;
+}
+#clist__a{
+    color:#fff;
     font-weight: bold;
- }
+    font-size: 14px;
+}
+#clist__a:hover{
+    color: var(--color-bg);
+}
+.one{
+    display: block;
+    
+}
  #setup{
     display: none;
  }
+
 button:hover{
     background: none;
 }
@@ -258,69 +300,6 @@ nav.sticky a:hover {
 button:hover #one{
     color: #fff;
 }
-// .collapsible {
-//     background-color: #173451;
-//     color: white;
-//     cursor: pointer;
-//     padding: 18px;
-//     width: 100%;
-//     border: none;
-//     text-align: left;
-//     outline: none;
-//     font-size: 15px;
-//   }
-  
-//   .active, .collapsible:hover {
-//     background-color: #173451;
-//   }
-  
-//   .collapsible:after {
-//     content: '\002B';
-//     color: white;
-//     font-weight: bold;
-//     float: right;
-//     margin-left: 5px;
-//   }
-  
-//   .active:after {
-//     content: "\2212";
-//   }
-  
-//   .content {
-//     padding: 0 18px;
-//     max-height: 0;
-//     overflow: hidden;
-//     transition: max-height 0.2s ease-out;
-//     background-color: #f1f1f1;
-//   }
-// .btn-group{
-//   padding-top: 10px;
-// }
-//   .content button {
-//     background-color: transparent;
-//     border-radius: 20px;
-//     border: solid 2px #fcbf16;
-//     padding: 10px;
-//     /* margin-top: 10px; */
-//     margin-bottom: 10px;
-//     cursor: pointer;
-//     display: inline-block;
-//   }
-//   .content button:hover {
-//     background-color: #fcbf16;
-//     /* border: none; */
-//     color: white;
-//     transition: 0.3s;
-//   }
-li:hover .page__menu{
-    display: block;
-    transition: linear 0.5s;
-}
-.page__menu a:hover {
-    transition: linear 0.5s;
-    color: #e60264;
-    
-}
 // .content i:hover{
 //     animation: rotate90 ease-in-out 1 1s forwards;
 // }
@@ -334,143 +313,73 @@ nav a:hover{
     color:#1c2e7b;
 }
 
-@media only screen and (max-width:996px) {
-    .bigger__one{
-        top: 270px;
-        position: absolute;
-        left: 15%;
-    }
-    header {
+.setting__ul{
+    width: 50px;
+    height: 57px;
+    text-align: center;
+    align-items: center;
+    padding: 16px 0;
+    color: #fff;
+    background-color: #1a2c79;
+    border-radius: 10px;
+    display: none;
+    position: absolute;
+    left: 90%;
+    /* justify-content: space-between; */
+    right: 0;
+    transition: 0.5s;
+}
+@media only screen and (max-width:1024px) {
+    header{
         ul{
             display: none;
         }
-        .content{
-            display: flex;
-            position: relative;
-            left: 0px;
+        .setting__ul{
+            display: block;
         }
-  
-    .setting #setup{
-        position: relative;
-        /* margin: 0px 100px; */
-        background-color: #1c2e7b;
-        padding: 15px;
-        border-radius: 8px;
-        color:#fff;
-        font-size: 21px;
-        font-weight: 900;
-        display: block;
-    }
-    .moon{
-        display: block;
-    }
-
-    nav{
-       width: 100%;
-        display: flex;
-        justify-content: space-around;
-        position: fixed;
-        justify-items: center;
-        padding: 20px 80px;
-        transition: all 0.5s ease-in-out;
-        ion-icon{
+        .ul__block{
+            animation-delay: 0.5s;
+            display: block;
+            width: 900px;
+            /* height: 239px; */
             position: absolute;
-            top: 5px;
-            left: 65px;
-            color: #fff;
+            text-align: center;
+            background: #fff;
+            margin-top: 74px;
+            margin: 58px 50px;
+            line-height: 37px;
+            align-items: center;
+            justify-content: center;
+        }
+        a{
+            color: #1a2c79;
+            font-size: 16px;
+            font-weight: bold;
+            transition: 1s;
+        }
+        .search{
+            color: #1c2e7b;
+        }
+        .fa-caret-up{
+            color: #1a2c79;
+        }
+        .collapsible{
+            margin-left: 15px;
+        }
+        .far-bars i{
+            color: #edf2fc;
+        }
+        nav{
+                /* max-width: 100%; */
+    width: 1015px;
+    display: flex;
+    justify-content: space-around;
+    position: fixed;
+    padding: 20px 0px;
+    transition: all 0.5s ease-in-out;
         }
     }
-    .bigger__one{
-        left: 5%;
-    }   
-}   
 }
-@media only screen and (max-width:1440px) {
-    .content{
-        display: flex;
-        position: relative;
-        left: 153px;
-    }
-    .header ul{
-        position: relative;
-        display: flex;  
-    }
-    header{
-        background: url(https://demo.w3layouts.com/demos_new/template_demo/22-03-2021/call-center-liberty-demo_Free/987049326/web/assets/images/banner1.jpg);
-    /* width: 100%; */
-    height: 80vh;
-    background-repeat: repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    .bigger{
-        background: linear-gradient(75deg, rgba(22, 37, 103, 0.84) 10%, rgba(230, 2, 100, 0.37));
-        position: absolute;
-        min-height: 80vh;
-        width: 100%;
-    }
-    nav{
-        justify-content: space-between  ;
-        padding: 20px 60px;
-    }
-    }
-       .bigger__one{
-          top:390px;
-          position: absolute;
-          left: 170px;
-        }
-}
-@media only screen and (max-width:425px) {
-    header nav{
-        width: 100%;
-        display: flex;
-        position: fixed;
-        /* margin-left: -129px; */
-        justify-items: center;
-        align-items: center;
-        padding: 20px 0px;
-        transition: all 0.5s ease-in-out;
-        justify-content: space-between
-    }
-}
-@media only screen and (max-width:375px) {
-    header{
-        height: 120vh;
-    }
-    .bigger{
-        height: 120vh;
-    }
-    header nav{
-        width: 100%;
-        display: flex;
-        position: fixed;
-        /* margin-left: -129px; */
-        justify-items: center;
-        align-items: center;
-        padding: 20px 0px;
-        transition: all 0.5s ease-in-out;
-        justify-content: space-between
-    }
-}
-@media only screen and (max-width:320px) {
-    header{
-        height: 140vh;
-    }
-    .bigger{
-        height: 140vh;
-    }
-    header nav{
-        width: 100%;
-        display: flex;
-        position: fixed;
-        /* margin-left: -129px; */
-        justify-items: center;
-        align-items: center;
-        padding: 20px 0px;
-        transition: all 0.5s ease-in-out;
-        justify-content: space-between
-    }
-}
-
 @keyframes totopimg{
     from{
         transform: translate(-50% , 20%);
@@ -510,4 +419,174 @@ nav a:hover{
 //               transform: translateX(-100px);
 //     }
 //   }
-  
+  .ballbe img{
+    width: 50px;
+    animation: ball 40s linear infinite;
+  }
+  .ballbe{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    align-items: center;
+    position: absolute;
+    bottom: -468%;
+  }
+  @keyframes ball{
+    0%{
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    70%{
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-500vh);
+        opacity: 0;
+    }
+
+}
+.ballbe img:nth-child(1){
+    animation-delay: 1s;
+}
+.ballbe img:nth-child(2){
+    animation-delay: 3s;
+}
+.ballbe img:nth-child(3){
+    animation-delay: 2s;
+}
+.ballbe img:nth-child(4){
+    animation-delay: 5s;
+}
+.ballbe img:nth-child(5){
+    animation-delay: 2.5s;
+}
+.ballbe img:nth-child(6){
+    animation-delay: 4s;
+}
+.ballbe img:nth-child(7){
+    animation-delay: 3.5s;
+}
+.ballbe img:nth-child(8){
+    animation-delay: 6s;
+}
+.ballbe img:nth-child(9){
+    animation-delay: 4.5s;
+}
+.ballbe img:nth-child(10){
+    animation-delay: 6.5s;
+}
+.ballbe img:nth-child(11){
+    animation-delay: 8s;
+}
+.ballbe img:nth-child(12){
+    animation-delay: 7.5s;
+}
+.ballbe img:nth-child(13){
+    animation-delay: 9s;
+}
+.ballbe img:nth-child(14){
+    animation-delay: 8.5s;
+}
+.ballbe img:nth-child(15){
+    animation-delay: 0.5s;
+}
+.ballbe img:nth-child(16){
+    animation-delay: 1.5s;
+}
+.ballbe img:nth-child(17){
+    animation-delay: 5.5s;
+}
+.ballbe img:nth-child(18){
+    animation-delay: 5s;
+}
+.ballbe img:nth-child(19){
+    animation-delay:3.5s;
+}
+.ballbe img:nth-child(20){
+    animation-delay: 4s;
+}
+.ballbe img:nth-child(21){
+    animation-delay: 3.5s;
+}
+.ballbe img:nth-child(22){
+    animation-delay: 2s;
+}
+.ballbe img:nth-child(23){
+    animation-delay: 0.5s;
+}
+.ballbe img:nth-child(24){
+    animation-delay: 6.5s;
+}
+.ballbe img:nth-child(25){
+    animation-delay: 7.5s;
+}
+.ballbe img:nth-child(26){
+    animation-delay: 6s;
+}
+.ballbe img:nth-child(27){
+    animation-delay: 7s;
+}
+.ballbe img:nth-child(28){
+    animation-delay: 4.5s;
+}
+.seach__one{
+    background-color: #f5f5f5;
+    border-radius: 50px;
+}
+#search1{
+    border: none;
+    background: none;
+    width: 0px;
+    outline: none;
+    height: 30px;
+    align-items: center;
+    color: #000;
+    transition: 2s linear;
+}
+.seach__one:hover > #search1{
+    width: 150px;
+}
+.checkboxdesign{
+    position: relative;
+    display: inline-block;
+    width: 70px;
+    height: 30px;
+    background-image: linear-gradient(to top  ,
+    var( --bg-light-checkbox-one),
+    var(    --bg-light-checkbox-two)
+    );
+    border-radius: 50px;
+    box-shadow: 0 0 0 1px var(--bglight-body),
+    0 0 0 4px var(--bg-light-checkbox-one);
+    transition: 1s;
+}
+.checkboxdesign input{
+display: none;
+}
+.checkboxdesign::before{
+    position: absolute;
+    background-color: var(--bg-sun);
+    content: "";
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    box-shadow:37px -5px 0 -7px var(--bg-cloud), 46px -1px 0 -8px var(--bg-cloud), 26px -2px 0 -8px var(--bg-cloud), 35px 5px 0 -7px var(--bg-cloud);
+     ;
+     transition: 1s;
+}
+body:has(input[name="checkboxdesign"]:checked){
+    background-color: var(--bg-dark);
+}
+.checkboxdesign:has(input:checked){
+
+    background-image: linear-gradient(to top , var(--bg-dark-checkbox-one), 
+    var(--bg-dark-checkbox-two));
+}
+.checkboxdesign:has(input:checked)::before{
+    left: calc(100% - 35px);
+    box-shadow:     
+    -39px -3px 0 -11px var(--bg-cloud), -29px 2px 0 -13px var(--bg-cloud), -39px 8px 0 -13px var(--bg-cloud), -45px 4px 0 -13px var(--bg-cloud);
+}
