--- a/src/scss/components/testominal.scss
+++ b/src/scss/components/testominal.scss
@@ -30,10 +30,11 @@
 
 }
 .testominal__content{
-    display: flex;
-    margin: 180px 400px;
-    width: 60%;
+    width: 1200px;
     position: relative;
+    display: flex;
+    margin: auto;
+    margin-top: 180px;
 }
 .content__one{
     margin: 0px 70px 0px 0px;
