--- a/src/scss/components/lastest.scss
+++ b/src/scss/components/lastest.scss
@@ -1,6 +1,6 @@
 .lastest{
     width: 100%;
-    height: 85vh;
+    height:90vh;
     background: #f9f9f9;
     font-family: 'Poppins';
 }
@@ -20,13 +20,14 @@
     }
 }
 .lastest__big{
-    display: flex;
+    display: grid;
     justify-content: space-around;
-    width: 70%;
+    width: 1200px;
     align-items: center;
     position: relative;
-    margin-top: 50px;
-    margin-left: 280px;
+    margin: auto;
+    grid-template-columns: auto auto auto;
+    margin-top: 110px;
 }
 .lastest__bg__one img{
     width: 85%;
@@ -48,12 +49,11 @@
 }
 .lastest__bg__content{
     background-color: #fff;
-    width: 85%;
+    width: auto;
     height: 200px;
-    position: relative;
-    top: -7px;
-    padding: 15px;
-    left: 34px;
+    padding: 2em !important;
+    margin: 0px 29px;
+    margin-top: -7px;
 }
 .content__p__two{
     display: flex;
@@ -79,13 +79,15 @@
     }
 }
 .user__bg{
-    width: 85%;
+    /* width: 85%; */
     height: 46px;
     background: #f1f1f1;
-    top: -18px;
+    /* top: -18px; */
     border-radius: 0 0 5px 5px;
-    position: relative;
+    /* position: relative; */
     transition: linear 0.5s;
+    /* left: 34px; */
+    margin: 0px 28px;
     left: 34px;
 }
 .user__circle{
@@ -151,285 +153,14 @@
 .lastest__bg__three:hover{
     animation:  bounce-top 1 1s forwards;
 }
-@media  only screen and (max-width:1440px) {
-    .lastest__big{
-        display: flex;
-        justify-content: space-around;
-        width: 90%;
-        align-items: center;
-        position: relative;
-        margin-top: 50px;
-        margin-left: 84px;
-    }
-}
-@media only screen and (max-width:996px) {
-    .lastest__big{
-        display: flex;
-        position: relative;
-        width: 100%;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin-left: 10px;
-    }
-    .lastest__bg__three{
-        position: relative;
-      
-    }
-    .lastest{
-        height: 150vh
-    }
-}
 @media only screen and (max-width:1024px) {
-    .lastest__bg__one{
-        width: 320px;
-        height: 420px;
-        position: relative;
-    }
-    .lastest__bg__two{
-        width: 320px;
-        height: 420px;
-        position: relative;
-    }
-    .lastest__bg__three{
-        width: 320px;
-        height: 420px;
-        position: relative;
-    }
-    .lastest__big{
-        display: flex;
-        position: relative;
-        width: 100%;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin-left: 10px;
-    }
-    .lastest__bg__one img{
-    width: 290px;
-    height: 190px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    }
-    .lastest__bg__two img {
-        width: 290px;
-        height: 190px;
-        position: relative;
-    }
-
-.lastest__bg__three img{
-    width: 290px;
-        height: 190px;
-        position: relative;
-}
-.lastest__bg__content{
-    background-color: #fff;
-    width: 291px;
-    height: 200px;
-    position: absolute;
-    top: 192px;
-    padding: 15px;
-    left: 15px;
-}
-.user__bg{
-    width: 292px;
-    height: 46px;
-    background: #f1f1f1;
-    top: 370px;
-    border-radius: 0 0 5px 5px;
-    position: absolute;
-    transition: linear 0.5s;
-    left: 16px;
-}
-}
-@media  only screen and (max-width:768px){
-    .lastest__big{
-        display: flex;
-        position: relative;
-        width: 100%;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin-left: 10px;
-    }
-    .lastest{
-        height: 120em;
-    }
-    .lastest__bg__three{
-        margin-top: 10px;
-    }
-}
-@media only screen and (max-width:425px) {
-    .lastest{
-        height: 190vh;
-    }
-    .lastest__big{
-        margin-left: 0;
-    }
-    .lastest__bg__one img{
-        width: 395px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__two img{
-        width: 395px;
-        height: 250px;
-    }
-    .lastest__bg__three img{
-        width: 395px;
-        height: 250px;
-    }
-    .lastest__bg__one{
-        width: 395px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__two{
-        width: 395px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__three{
-        width: 395px;
-        height: 250px;
-        left: 0;
-    }
-    .lastest__bg__content{
-        background-color: #fff;
-        width: 395px;
-        height: 200px;
-        position: absolute;
-        top: 247px;
-        padding: 15px;
-        left: 0;
-    }
-    .user__bg{
-        width: 396px;
-        height: 46px;
-        background: #f1f1f1;
-        top: 431px;
-        border-radius: 0 0 5px 5px;
-        position: absolute;
-        transition: linear 0.5s;
-        left: 0;
-        /* left: 16px;*/
-    }
-}
-@media only screen and (max-width:375px) {
-    .lastest{
-        height: 270vh;
-    }
-    .lastest__big{
-        margin-left: 0;
-    }
-    .lastest__bg__one img{
-        width: 360px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__two img{
-        width: 360px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__three img{
-        width: 360px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__one{
-        width: 360px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__two{
-        width: 360px;
-        height: 250px;;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__three{
-        width: 360px;
-        height: 250px;
-        left: 0;
-    }
-    .lastest__bg__content{
-        background-color: #fff;
-        width: 360px;
-        height: 200px;
-        position: absolute;
-        top: 247px;
-        padding: 15px;
-        left: 0;
-    }
-    .user__bg{
-        width: 360px;
-        height: 46px;
-        background: #f1f1f1;
-        top: 431px;
-        border-radius: 0 0 5px 5px;
-        position: absolute;
-        transition: linear 0.5s;
-        left: 0;
-        /* left: 16px;*/
-    }
-}
-@media only screen and (max-width:320px) {
-    .lastest{
-        height: 240vh;
-    }
-    .lastest__big{
-        margin-left: 0;
-    }
-    .lastest__bg__one img{
-        width: 300px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__two img{
-        width: 300px;
-    height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__three img{
-        width: 300px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__one{
-        width: 300px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__two{
-        width: 300px;
-        height: 250px;
-        margin-bottom: 290px;
-    }
-    .lastest__bg__three{
-        width: 300px;
-        height: 250px;
-        left: 0;
-    }
-    .lastest__bg__content{
-        background-color: #fff;
-        width: 300px;
-        height: 200px;
-        position: absolute;
-        top: 247px;
-        padding: 15px;
-        left: 0;
-    }
-    .user__bg{
-        width: 300px;
-        height: 46px;
-        background: #f1f1f1;
-        top: 431px;
-        border-radius: 0 0 5px 5px;
-        position: absolute;
-        transition: linear 0.5s;
-        left: 0;
-        /* left: 16px;*/
-    }
+   .lastest__big{
+    height:  150vh;
+     display: grid;
+     flex-wrap: wrap;
+     width: 85%;
+     grid-template-columns: 400px 400px;
+   }
 }
 @keyframes bounce-top {
     0% {
