--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -1,15 +1,13 @@
-.product{
-    width: 100%;
-    height: 70vh;
-    background-color: white;
-}
-.product__bigger{
-    margin: 80px 300px;
-    display: flex;
+
+    .product__bigger{
+        margin: auto;
+        display: flex;
+        max-width: 100%;
+        width: 1290px;
+        margin-top: 90px;
+        margin-bottom: 90px;
 }
 .product__left{
-    display: block;
-    width: 100%;
     animation: showtop ease-in-out 1 1s forwards;
     animation-delay: 2s;
     opacity: 0;
@@ -21,7 +19,7 @@
     font-size: 16px;
     line-height: 31px;
     width: 90%;
-    color: #707070;
+    color: #b7b7b7;
     margin: 14px 0px;
     }
 }
@@ -31,7 +29,9 @@
     animation: showright ease-in-out 1 1s forwards;
     animation-delay: 2s;
 }
-.mision {
+.mision{
+
+
     i{
         font-size: 37px;
         background: linear-gradient(75deg, #1c2e7b 10%, #e60264);
@@ -56,93 +56,10 @@
         font-size: 21px;
     margin-top: 8px;
     }
-}
-
-@media only screen and ( max-width:1440px){
-    .product{
-        height: 50vh;
-    }
-    .product__bigger{
-        margin: 80px 140px;
-    display: flex;;
-    }
-}
-@media only  screen and (max-width:1024px) {
-   .product{
-    height: 50vh;
-   }
-   .product__left{
-    display:block;
-    margin-left: -7px;
-    width: 70%;
-   }
-   .product__left__two {
-    display: flex;
-    margin: 50px 0px;
-    width: 99%;
-}
-.vision{
-    width: 100%;
-
-}
-.product__left p {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 30px;
-    color: #707070;
-    margin: 0px 0px;
-    text-align: left;
-
-}
-.product__right 
-img{ 
-    width: 100%;
-    margin: 0px;
-    position: relative;
-}
-.product__bigger {
-    margin: 80px 40px;
-    display: flex;
-}
-}
-@media only screen and (max-width:996px) {
-    .product__bigger{
-        margin: 80px 32px;
-        display: block;
-    }
-    .product{
-        height: 100vh;
-    }
-    .product__left{
-        display: inline;
-        margin:0;
-        width: 0%;
-    }
-    .product__right img{
-        width: 90%;
-    }
-}
-@media only screen and (max-width:425px) {
-    .product__bigger{
-        margin: 80px 0px;
-        display: block;
-        margin-left: 2px;
     
-    }
-    .product{
-        height: 90vh;
-    }
 }
-@media only screen and (max-width:375px) {
-    .product__left__two{
-       width: 100%;
-       margin: 30px 0px;
-    
-    }
-    .product__bigger{
-        margin-left: 8px;
-    }
-}
+
+
 @keyframes showtop{
     from{
         opacity: 0;
