--- a/src/scss/globals/base.scss
+++ b/src/scss/globals/base.scss
@@ -29,8 +29,8 @@ button {
 }
 
 .container{
+  max-width: 100%;
   width: 100%;
-  height: auto;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
